Lots of minor optimizations: perf, installation, db commit fault tolerance, 'TabStripCreated' event refactoring & other stuff

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -191,7 +191,7 @@
     <Compile Include="Controllers\SmartController.cs" />
     <Compile Include="Controllers\StoreIpAddressAttribute.cs" />
     <Compile Include="Controllers\UnitOfWorkAttribute.cs" />
-    <Compile Include="Events\AdminTabStripCreated.cs" />
+    <Compile Include="Events\TabStripCreated.cs" />
     <Compile Include="Extensions\HttpRequestExtensions.cs" />
     <Compile Include="Extensions\NameValueCollectionExtensions.cs" />
     <Compile Include="HandleInstallFilter.cs" />
