Added new field 'OrderNumber' to order entity to allow custom number formatters to intercept and create a 'pretty' order number.

--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Domain\Common\BankConnectionSettings.cs" />
     <Compile Include="Domain\Common\SocialSettings.cs" />
     <Compile Include="Domain\Directory\DeliveryTime.cs" />
+    <Compile Include="Domain\Orders\OrderExtensions.cs" />
     <Compile Include="Domain\Stores\IStoreMappingSupported.cs" />
     <Compile Include="Domain\Stores\Store.cs" />
     <Compile Include="Domain\Stores\StoreExtensions.cs" />
