--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -51,7 +51,7 @@
       <siteMapNode id="discounts" title="Discounts" resKey="Admin.Promotions.Discounts" permissionNames="ManageDiscounts" controller="Discount" action="List" area="Admin" />
     </siteMapNode>
 
-    <siteMapNode id="cms" title="Content&#160;Management" resKey="Admin.ContentManagement" permissionNames="ManagePolls, ManageNews, ManageBlog, ManageWidgets, ManageTopics, ManageForums, ManageMessageTemplates"
+    <siteMapNode id="cms" title="CMS" resKey="Admin.ContentManagement" permissionNames="ManagePolls, ManageNews, ManageBlog, ManageWidgets, ManageTopics, ManageForums, ManageMessageTemplates"
                  iconClass="sm-icon-folder" imageUrl="~/Administration/Content/images/ap-cms-white.png">
       <siteMapNode id="topics" title="Pages &amp; Topics" resKey="Admin.ContentManagement.Topics" permissionNames="ManageTopics" controller="Topic" action="List" area="Admin" />
       <siteMapNode id="news" title="News" resKey="Admin.ContentManagement.News" permissionNames="ManageNews" area="Admin" >
