--- a/src/Libraries/SmartStore.Data/packages.config
+++ b/src/Libraries/SmartStore.Data/packages.config
@@ -3,4 +3,5 @@
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="EntityFramework.SqlServerCompact" version="4.3.5" targetFramework="net45" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
+  <package id="Microsoft.SqlServer.Scripting" version="11.0.2100.61" targetFramework="net45" />
 </packages>
