--- a/src/Plugins/Widgets.TrustedShopsCustomerReviews/SmartStore.Plugin.Widgets.TrustedShopsCustomerReviews.csproj
+++ b/src/Plugins/Widgets.TrustedShopsCustomerReviews/SmartStore.Plugin.Widgets.TrustedShopsCustomerReviews.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="FluentValidation">
       <HintPath>..\..\packages\FluentValidation.3.4.6.0\lib\Net40\FluentValidation.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System" />
