--- a/src/Plugins/Widgets.TrustedShopsSeal/SmartStore.Plugin.Widgets.TrustedShopsSeal.csproj
+++ b/src/Plugins/Widgets.TrustedShopsSeal/SmartStore.Plugin.Widgets.TrustedShopsSeal.csproj
@@ -33,7 +33,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FluentValidation">
-      <HintPath>..\..\..\..\..\..\TSClient\SmartNop\src\packages\FluentValidation.3.4.6.0\lib\Net40\FluentValidation.dll</HintPath>
+      <HintPath>..\..\packages\FluentValidation.3.4.6.0\lib\Net40\FluentValidation.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System" />
