--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -42,6 +42,10 @@
           <requestLimits maxAllowedContentLength="1572864000" maxQueryString="16384" />
         </requestFiltering>
       </security>
+      <httpErrors errorMode="DetailedLocalOnly" defaultResponseMode="File">
+        <remove statusCode="404" />
+        <error statusCode="404" path="~/404" />
+      </httpErrors>
     </system.webServer>
   </location>
   <system.web>
@@ -50,7 +54,7 @@
     <!-- Find more info in browserCaps.config file -->
     <browserCaps configSource="browserCaps.config" />
     <customErrors defaultRedirect="errorpage.htm" mode="RemoteOnly">
-      <error statusCode="404" redirect="filenotfound.htm" />
+      <error statusCode="404" redirect="~/404" />
     </customErrors>
     <trace enabled="false" localOnly="true" />
     <compilation debug="true" targetFramework="4.5">
