--- a/src/Presentation/SmartStore.Web.Framework/packages.config
+++ b/src/Presentation/SmartStore.Web.Framework/packages.config
@@ -20,6 +20,6 @@
   <package id="recaptcha" version="1.0.5.0" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="TelerikMvcExtensions" version="2012.2.607" targetFramework="net45" />
-  <package id="WebActivator" version="1.5.1" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
