--- a/src/Presentation/SmartStore.Web/packages.config
+++ b/src/Presentation/SmartStore.Web/packages.config
@@ -25,5 +25,6 @@
   <package id="recaptcha" version="1.0.5.0" targetFramework="net45" />
   <package id="TelerikMvcExtensions" version="2012.2.607" targetFramework="net45" />
   <package id="underscore.js" version="1.4.0" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
