--- a/src/Tests/SmartStore.Web.MVC.Tests/packages.config
+++ b/src/Tests/SmartStore.Web.MVC.Tests/packages.config
@@ -8,5 +8,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.1" targetFramework="net45" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net45" />
-  <package id="WebActivator" version="1.5.1" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
 </packages>
