--- a/src/Plugins/Widgets.TrustedShopsCustomerProtection/SmartStore.Plugin.Widgets.TrustedShopsCustomerProtection.csproj
+++ b/src/Plugins/Widgets.TrustedShopsCustomerProtection/SmartStore.Plugin.Widgets.TrustedShopsCustomerProtection.csproj
@@ -59,6 +59,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\AssemblySharedInfo.cs">
+      <Link>Properties\AssemblySharedInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\..\AssemblyVersionInfo.cs">
+      <Link>Properties\AssemblyVersionInfo.cs</Link>
+    </Compile>
     <Compile Include="Controllers\TrustedShopsCustomerProtectionController.cs" />
     <Compile Include="OrderPlacedEventConsumer.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
