--- a/src/Plugins/Widgets.TrustedShopsCustomerReviews/SmartStore.Plugin.Widgets.TrustedShopsCustomerReviews.csproj
+++ b/src/Plugins/Widgets.TrustedShopsCustomerReviews/SmartStore.Plugin.Widgets.TrustedShopsCustomerReviews.csproj
@@ -57,6 +57,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\AssemblySharedInfo.cs">
+      <Link>Properties\AssemblySharedInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\..\AssemblyVersionInfo.cs">
+      <Link>Properties\AssemblyVersionInfo.cs</Link>
+    </Compile>
     <Compile Include="Controllers\TrustedShopsCustomerReviewsController.cs" />
     <Compile Include="Models\PublicInfoCheckoutModel.cs" />
     <Compile Include="OrderPlacedEventConsumer.cs" />
