--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -30,7 +30,7 @@
     <add key="TempDirectory" value="~/App_Data/_temp" />
     <add key="BizImportMediaDirectory" value="~/Media/Uploaded/static" />
     <add key="ApplicationName" value="SmartStore.NET" />
-    <add key="PluginsIgnoredDuringInstallation" value="Misc.DemoShop" />
+    <add key="PluginsIgnoredDuringInstallation" value="Misc.DemoShop, Developer.Glimpse" />
   </appSettings>
   <location path="Plugins/ImportBiz">
     <system.web>
