--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -56,7 +56,7 @@
     <customErrors defaultRedirect="errorpage.htm" mode="RemoteOnly">
       <error statusCode="404" redirect="~/404" />
     </customErrors>
-    <trace enabled="false" localOnly="true" />
+    <trace enabled="true" localOnly="true" />
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
