Updated migration scripts (2nd)

--- a/src/Plugins/Widgets.TrustedShopsCustomerProtection/SmartStore.Plugin.Widgets.TrustedShopsCustomerProtection.csproj
+++ b/src/Plugins/Widgets.TrustedShopsCustomerProtection/SmartStore.Plugin.Widgets.TrustedShopsCustomerProtection.csproj
@@ -132,7 +132,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="icon.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Localization\resources.de-de.xml">
       <SubType>Designer</SubType>
