--- a/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
@@ -126,7 +126,10 @@
     <Var name="WellBackground" type="Color">#f5f5f5</Var>
     <Var name="ItemBoxBoxShadowColor" type="Color">#f89406</Var>
     <Var name="SimpleBoxHeaderColor" type="Color">#ddd</Var>
-
+    <Var name="ProductFilterBackgroundColor" type="Color">#f4f8f9</Var>
+    <Var name="CheckoutProgressBackgroundColor" type="Color">#f5f5f5</Var>
+    <Var name="AlternateListItemBackgroundColor" type="Color">#f5f5f5</Var>
+    
     <!-- Slider -->
     <Var name="SliderUseRadialBg" type="Boolean">true</Var>
     <Var name="SliderBgSlide" type="Select#BgSlideBehaviours">on</Var>
