Perf: Added IWidgetSelector interface which does the job of WidgetController.WidgetsByZone now (the action was executed too often for empty zones, now it get's executed only when widgets should be rendered).

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -223,6 +223,7 @@
     <Compile Include="UI\Components\Window\WindowRenderer.cs" />
     <Compile Include="UI\Components\Window\WindowBuilder.cs" />
     <Compile Include="UI\Components\Window\Window.cs" />
+    <Compile Include="UI\IWidgetSelector.cs" />
     <Compile Include="UI\ScaffoldExtensions.cs" />
     <Compile Include="Security\AdminValidateIpAddressAttribute.cs" />
     <Compile Include="Security\FilePermissionHelper.cs" />
@@ -319,6 +320,7 @@
     <Compile Include="UI\Components\TabStrip\TabBuilder.cs" />
     <Compile Include="UI\Components\TabStrip\TabFactory.cs" />
     <Compile Include="UI\Components\TabStrip\TabStripRenderer.cs" />
+    <Compile Include="UI\WidgetRouteInfo.cs" />
     <Compile Include="UrlHelperExtensions.cs" />
     <Compile Include="Validators\ValidatorExtensions .cs" />
     <Compile Include="Validators\CreditCardPropertyValidator.cs" />
