--- a/src/Plugins/DiscountRules.HadSpentAmount/SmartStore.Plugin.DiscountRules.HadSpentAmount.csproj
+++ b/src/Plugins/DiscountRules.HadSpentAmount/SmartStore.Plugin.DiscountRules.HadSpentAmount.csproj
@@ -44,6 +44,9 @@
       <Private>False</Private>
       <HintPath>..\..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
@@ -88,6 +91,7 @@
     <Compile Include="HadSpentAmountDiscountRequirementRule.cs" />
     <Compile Include="Models\RequirementModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequirementSettings.cs" />
     <Compile Include="RouteProvider.cs" />
   </ItemGroup>
   <ItemGroup>
