--- a/src/Plugins/DiscountRules.HadSpentAmount/packages.config
+++ b/src/Plugins/DiscountRules.HadSpentAmount/packages.config
@@ -4,4 +4,5 @@
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
 </packages>
