--- a/src/Plugins/Widgets.TrustedShopsCustomerReviews/SmartStore.Plugin.Widgets.TrustedShopsCustomerReviews.csproj
+++ b/src/Plugins/Widgets.TrustedShopsCustomerReviews/SmartStore.Plugin.Widgets.TrustedShopsCustomerReviews.csproj
@@ -108,6 +108,21 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\images\logo_de.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\images\logo_en.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\images\prepared.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\images\seal_rating_de.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\images\seal_rating_en.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\images\TrustedShops-rgb-Siegel_100Hpx.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
