Added IsHomePage property to WebViewPage

--- a/SmartStoreNET.Tasks.Targets
+++ b/SmartStoreNET.Tasks.Targets
@@ -166,7 +166,7 @@
 
 	</Target>
   
-	<Target Name="Package-Zip" DependsOnTargets="Stage">
+	<Target Name="Package-Zip">
 		<ItemGroup>
 			<Zip-Stage Include="$(StageFolder)\**\*" />
 		</ItemGroup>
